# clawsec

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile.dev  Dockerfile.runtime  LICENSE  Makefile  README.md  config.yaml  docker-compose.yml  go.mod  go.sum
pre-installation/: README.md  pyproject.toml
pre-installation/rules/behavior-alignment/: AI-BA-001.yaml  AI-BA-002.yaml  AI-BA-003.yaml  AI-BA-004.yaml
pre-installation/rules/code-execution/: AI-CE-001.yaml  AI-CE-002.yaml  AI-CE-003.yaml  AI-CE-004.yaml  AI-CE-005.yaml
pre-installation/rules/data-provenance/: AI-DP-001.yaml  AI-DP-002.yaml
pre-installation/rules/identity/: AI-ID-001.yaml  AI-ID-002.yaml  AI-ID-003.yaml  AI-ID-004.yaml
pre-installation/rules/infrastructure/: AI-IR-001.yaml  AI-IR-002.yaml  AI-IR-003.yaml  AI-IR-004.yaml  AI-IR-005.yaml  AI-IR-006.yaml  AI-IR-007.yaml
pre-installation/rules/licensing/: AI-LC-001.yaml  AI-LC-002.yaml  AI-LC-003.yaml  AI-LC-004.yaml  AI-LC-005.yaml  AI-LC-006.yaml  AI-LC-007.yaml  AI-LC-008.yaml
pre-installation/rules/model-format/: AI-MF-001.yaml  AI-MF-002.yaml  AI-MF-003.yaml
pre-installation/rules/privacy/: AI-PD-001.yaml
pre-installation/rules/regulatory/: AI-RC-001.yaml  AI-RC-002.yaml  AI-RC-003.yaml  AI-RC-004.yaml
pre-installation/rules/supply-chain/: AI-SC-001.yaml  AI-SC-002.yaml  AI-SC-003.yaml  AI-SC-004.yaml  AI-SC-005.yaml
pre-installation/schema/: rule_schema.json
pre-installation/scripts/: validate_rules.py
pre-installation/src/checker/: __init__.py  cli.py  (+4 more)
pre-installation/tests/: create_fixtures.py  test_checker.py
(+100 files in other folders)
